--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="row justify-content-around">
-                <div class="col-md-4 text-center">
+                <div class="col text-center">
                     <h5 id="languages"
                         aria-label="Sprachauswahl"
                         i18n-aria-label
