--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -27,6 +27,7 @@ body {
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden !important;
 }
 
 $font-family-sans-serif: // Safari for macOS and iOS (San Francisco)
