--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -1,142 +1,12 @@
 <div class="row m-0 mb-4">
     <div class="col-12 p-0 text-center">
-        <h1 class="display-3"
+        <h1 class="display-3 m-0"
             i18n>Feedback</h1>
-
-        <p class="lead mb-3"
-           i18n>Wie können wir Ihnen heute weiterhelfen? Beschreiben Sie Ihr Anliegen.</p>
-
-        <div class="row m-0 justify-content-center">
-            <div class="col-12 p-0 mb-2">
-                <input type="text"
-                       class="form-control d-inline w-75"
-                       list="ticketList"
-                       style="max-width: 500px;"
-                       [(ngModel)]="search"
-                       (change)="doSearch()"
-                       i18n-placeholder
-                       placeholder="Suchen Sie nach einer Lösung">
-
-                <datalist id="ticketList">
-                    <option *ngFor="let ticket of this.rss | slice:5; let i = index;"
-                            value="{{ ticket.children[2].innerHTML }}">
-                        {{ ticket.children[2].innerHTML }}
-                    </option>
-                </datalist>
-
-                <button type="submit"
-                        class="btn btn-success ml-1"
-                        style="vertical-align: 0;"
-                        i18n-title
-                        title="Suchen"
-                        i18n-aria-label
-                        aria-label="Suchen"
-                        (click)="doSearch()">
-                    <svg width="1em"
-                         height="1em"
-                         viewBox="0 0 16 16"
-                         class="bi bi-search"
-                         fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg"
-                         focusable="false"
-                         aria-hidden="true">
-                        <path fill-rule="evenodd"
-                              d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
-                        <path fill-rule="evenodd"
-                              d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
-                    </svg>
-                    <span class="sr-only"
-                          i18n>Suchen</span>
-                </button>
-            </div>
-
-            <div class="col-12 p-0 mb-2">
-                <select class="custom-select w-75"
-                        style="max-width: 250px;"
-                        [(ngModel)]="stateFilter">
-                    <option value="all"
-                            i18n>Alle Tickets anzeigen</option>
-                    <option value="opened"
-                            i18n>Offene Tickets anzeigen</option>
-                    <option value="closed"
-                            i18n>Geschlossene Tickets anzeigen</option>
-                </select>
-            </div>
-        </div>
-
-        <a href="javascript:;"
-           *ngIf="showTickets"
-           (click)="hideAll()"
-           i18n>Tickets ausblenden</a>
-    </div>
-</div>
-
-<div class="container mb-4"
-     *ngIf="showTickets">
-    <ng-container *ngFor="let ticket of this.rss | slice:5; let i = index;">
-        <div class="card w-100 mb-2">
-            <div class="card-body">
-                <h5 class="card-title">{{ ticket.children[2].innerHTML }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{ ticket.children[3].innerHTML | date:'short' }}</h6>
-                <p class="card-text lineb">{{ ticket.children[7].innerHTML }}</p>
-            </div>
-        </div>
-    </ng-container>
-
-    <div *ngIf="this.rss.length < 5">
-        <div class="text-center">
-            <p i18n>Leider konnten wir zu Ihrer Suchanfrage nichts finden. Bei Bedarf können Sie uns gerne kontaktieren!
-            </p>
-        </div>
     </div>
 </div>
 
 <div class="row m-0 mb-4">
-    <section class="col-12 col-lg-6">
-        <div class="jumbotron m-0">
-            <h1 class="display-4">
-                <svg width="1em"
-                     height="1em"
-                     viewBox="0 0 16 16"
-                     class="bi bi-bug-fill"
-                     fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg"
-                     focusable="false"
-                     aria-hidden="true">
-                    <path fill-rule="evenodd"
-                          d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956zM13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z" />
-                </svg>
-                <span class="ml-2"
-                      i18n>Problem melden</span>
-            </h1>
-
-            <p class="lead text-justify"
-               i18n>Geben Sie bitte eine genaue Beschreibung des Problems an, welche Schritte haben zu diesem Problem
-                geführt? Wenn möglich senden Sie bitte ein Bildschirmfoto und die Adresszeile der Seite mit.</p>
-
-            <a class="btn btn-primary btn-lg"
-               href="mailto:{{ mail }}"
-               role="button"
-               i18n-title
-               title="Feedback über E-Mail geben">
-                <svg width="1em"
-                     height="1em"
-                     viewBox="0 0 16 16"
-                     class="bi bi-envelope"
-                     fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg"
-                     focusable="false"
-                     aria-hidden="true">
-                    <path fill-rule="evenodd"
-                          d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z" />
-                </svg>
-                <span class="ml-1"
-                      i18n>Kontakt</span>
-            </a>
-        </div>
-    </section>
-
-    <section class="col-12 col-lg-6">
+    <section class="col-12 col-lg-6 mb-3">
         <div class="jumbotron m-0">
             <h1 class="display-4">
                 <svg width="1em"
@@ -155,8 +25,9 @@
             </h1>
 
             <p class="lead text-justify"
-               i18n>Bitte formulieren Sie Ihr Feedback so exakt wie möglich. Ihr Feedback wird evaluiert und Sie
-                erhalten in Kürze weitere Informationen von uns.</p>
+               i18n>Geben Sie bitte eine genaue Beschreibung des Problems oder Ihres Vorschlages an, welche Schritte
+                haben zu diesem Problem
+                geführt? Wenn möglich senden Sie bitte ein Bildschirmfoto und die Adresszeile der Seite mit.</p>
 
             <a class="btn btn-primary btn-lg"
                href="mailto:{{ mail }}"
@@ -174,42 +45,135 @@
                     <path fill-rule="evenodd"
                           d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z" />
                 </svg>
-                <span class="ml-1"
+                <span class="ml-2"
                       i18n>Kontakt</span>
             </a>
+
+            <hr class="my-4">
+
+            <p i18n-aria-label
+               aria-label="Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an nachfolgenden E-Mail Adresse."
+               i18n>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
+            <code class="mr-2">{{ mail }}</code>
+            <button type="button"
+                    class="btn btn-primary btn-sm"
+                    i18n-title
+                    title="Email-Adresse kopieren"
+                    aria-i18n-label
+                    aria-label="Email-Adresse kopieren"
+                    (click)="copyEmailToClipboard()">
+                <svg width="1em"
+                     height="1em"
+                     viewBox="0 0 16 16"
+                     class="bi bi-clipboard"
+                     fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg"
+                     focusable="false"
+                     aria-hidden="true">
+                    <path fill-rule="evenodd"
+                          d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
+                    <path fill-rule="evenodd"
+                          d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
+                </svg>
+                <span class="sr-only"
+                      i18n>Email-Adresse kopieren</span>
+            </button>
         </div>
     </section>
-</div>
 
-<div class="row m-0">
-    <div class="col-sm text-center">
-        <p class="mt-3"
-           i18n-aria-label
-           aria-label="Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an nachfolgenden E-Mail Adresse."
-           i18n>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
-        <code class="mr-2">{{ mail }}</code>
-        <button type="button"
-                class="btn btn-light btn-sm"
-                i18n-title
-                title="Email-Adresse kopieren"
-                aria-i18n-label
-                aria-label="Email-Adresse kopieren"
-                (click)="copyEmailToClipboard()">
-            <svg width="1em"
-                 height="1em"
-                 viewBox="0 0 16 16"
-                 class="bi bi-clipboard"
-                 fill="currentColor"
-                 xmlns="http://www.w3.org/2000/svg"
-                 focusable="false"
-                 aria-hidden="true">
-                <path fill-rule="evenodd"
-                      d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
-                <path fill-rule="evenodd"
-                      d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
-            </svg>
-            <span class="sr-only"
-                  i18n>Email-Adresse kopieren</span>
-        </button>
-    </div>
+    <section class="col-12 col-lg-6 mb-3">
+        <div class="jumbotron m-0">
+            <h1 class="display-4">
+                <svg width="1em"
+                     height="1em"
+                     viewBox="0 0 16 16"
+                     class="bi bi-journals"
+                     fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg"
+                     focusable="false"
+                     aria-hidden="true">
+                    <path
+                          d="M3 2h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2h1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1H1a2 2 0 0 1 2-2z" />
+                    <path
+                          d="M5 0h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2v-1a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1H3a2 2 0 0 1 2-2zM1 6v-.5a.5.5 0 0 1 1 0V6h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V9h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" />
+                </svg>
+                <span class="ml-2"
+                      i18n>Ticket Übersicht</span>
+            </h1>
+
+            <p class="lead mb-3"
+               i18n>Bitte beschreiben Sie Ihr Anliegen.</p>
+
+            <div class="row m-0">
+                <div class="col-12 p-0 mb-2">
+                    <input type="text"
+                           class="form-control d-inline w-75"
+                           style="max-width: 500px;"
+                           [(ngModel)]="search"
+                           (change)="doSearch()"
+                           i18n-placeholder
+                           placeholder="Suche">
+
+                    <button type="submit"
+                            class="btn btn-success ml-1"
+                            style="vertical-align: 0;"
+                            i18n-title
+                            title="Suchen"
+                            i18n-aria-label
+                            aria-label="Suchen"
+                            (click)="doSearch()">
+                        <svg width="1em"
+                             height="1em"
+                             viewBox="0 0 16 16"
+                             class="bi bi-search"
+                             fill="currentColor"
+                             xmlns="http://www.w3.org/2000/svg"
+                             focusable="false"
+                             aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                  d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
+                            <path fill-rule="evenodd"
+                                  d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                        </svg>
+                        <span class="sr-only"
+                              i18n>Suchen</span>
+                    </button>
+                </div>
+
+                <div class="col-12 p-0">
+                    <select class="custom-select w-75"
+                            style="max-width: 250px;"
+                            [(ngModel)]="stateFilter"
+                            (change)="doSearch()">
+                        <option value="all"
+                                i18n>Alle Tickets</option>
+                        <option value="opened"
+                                i18n>Offene Tickets</option>
+                        <option value="closed"
+                                i18n>Geschlossene Tickets</option>
+                    </select>
+                </div>
+            </div>
+
+            <hr class="my-4">
+
+            <ng-container *ngFor="let ticket of this.rss | slice:5; let i = index;">
+                <div class="card w-100 mb-2">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ ticket.children[2].innerHTML }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ ticket.children[3].innerHTML | date:'short' }}</h6>
+                        <p class="card-text lineb">{{ ticket.children[7].innerHTML }}</p>
+                    </div>
+                </div>
+            </ng-container>
+
+            <div *ngIf="this.rss.length < 5">
+                <div class="text-center">
+                    <span i18n>Leider konnten wir keine Tickets finden. Bei Bedarf können Sie uns gerne
+                        kontaktieren.
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
