--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -2,6 +2,10 @@
     <div class="col-12 p-0 text-center">
         <h1 class="display-3 m-0"
             i18n>Feedback</h1>
+
+        <p class="lead mb-3"
+           i18n>Bitte schauen Sie in der Feedbackübersicht, ob Ihr Anliegen uns bereits geschickt wurde. Sollte dies
+            nicht der Fall sein nutzen Sie bitte die Kontaktfunktion.</p>
     </div>
 </div>
 
@@ -24,60 +28,72 @@
                       i18n>Feedback geben</span>
             </h1>
 
-            <p class="lead text-justify"
+            <p class="lead"
                i18n>Geben Sie bitte eine genaue Beschreibung des Problems oder Ihres Vorschlages an, welche Schritte
                 haben zu diesem Problem
                 geführt? Wenn möglich senden Sie bitte ein Bildschirmfoto und die Adresszeile der Seite mit.</p>
 
-            <a class="btn btn-primary btn-lg"
-               href="mailto:{{ mail }}"
-               role="button"
-               i18n-title
-               title="Feedback über E-Mail geben">
-                <svg width="1em"
-                     height="1em"
-                     viewBox="0 0 16 16"
-                     class="bi bi-envelope"
-                     fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg"
-                     focusable="false"
-                     aria-hidden="true">
-                    <path fill-rule="evenodd"
-                          d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z" />
-                </svg>
-                <span class="ml-2"
-                      i18n>Kontakt</span>
-            </a>
+            <p class="lead"
+               i18n>Ihr Feedback wird manuell freigeschaltet, bevor es in der Feedbackübersicht angezeigt wird.</p>
+
+            <p class="lead"
+               i18n>Bitte denken Sie daran, Ihre Mailsignatur zu entfernen, wenn Sie nicht wünschen, dass diese in der
+                Feedbackübersicht rechts angezeigt werden soll.</p>
+
+            <div class="text-center">
+                <a class="btn btn-primary btn-lg"
+                   href="mailto:{{ mail }}"
+                   role="button"
+                   i18n-title
+                   title="Feedback über E-Mail geben">
+                    <svg width="1em"
+                         height="1em"
+                         viewBox="0 0 16 16"
+                         class="bi bi-envelope"
+                         fill="currentColor"
+                         xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
+                         aria-hidden="true">
+                        <path fill-rule="evenodd"
+                              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z" />
+                    </svg>
+                    <span class="ml-2"
+                          i18n>Kontakt</span>
+                </a>
+            </div>
 
             <hr class="my-4">
 
-            <p i18n-aria-label
+            <p class="text-center"
+               i18n-aria-label
                aria-label="Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an nachfolgenden E-Mail Adresse."
                i18n>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
-            <code class="mr-2">{{ mail }}</code>
-            <button type="button"
-                    class="btn btn-primary btn-sm"
-                    i18n-title
-                    title="Email-Adresse kopieren"
-                    aria-i18n-label
-                    aria-label="Email-Adresse kopieren"
-                    (click)="copyEmailToClipboard()">
-                <svg width="1em"
-                     height="1em"
-                     viewBox="0 0 16 16"
-                     class="bi bi-clipboard"
-                     fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg"
-                     focusable="false"
-                     aria-hidden="true">
-                    <path fill-rule="evenodd"
-                          d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
-                    <path fill-rule="evenodd"
-                          d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
-                </svg>
-                <span class="sr-only"
-                      i18n>Email-Adresse kopieren</span>
-            </button>
+            <div class="text-center">
+                <code class="mr-2">{{ mail }}</code>
+                <button type="button"
+                        class="btn btn-secondary btn-sm"
+                        i18n-title
+                        title="Email-Adresse kopieren"
+                        aria-i18n-label
+                        aria-label="Email-Adresse kopieren"
+                        (click)="copyEmailToClipboard()">
+                    <svg width="1em"
+                         height="1em"
+                         viewBox="0 0 16 16"
+                         class="bi bi-clipboard"
+                         fill="currentColor"
+                         xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
+                         aria-hidden="true">
+                        <path fill-rule="evenodd"
+                              d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
+                        <path fill-rule="evenodd"
+                              d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
+                    </svg>
+                    <span class="sr-only"
+                          i18n>Email-Adresse kopieren</span>
+                </button>
+            </div>
         </div>
     </section>
 
@@ -98,11 +114,8 @@
                           d="M5 0h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2v-1a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1H3a2 2 0 0 1 2-2zM1 6v-.5a.5.5 0 0 1 1 0V6h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V9h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" />
                 </svg>
                 <span class="ml-2"
-                      i18n>Ticket Übersicht</span>
+                      i18n>Feedbackübersicht</span>
             </h1>
-
-            <p class="lead mb-3"
-               i18n>Bitte beschreiben Sie Ihr Anliegen.</p>
 
             <div class="row m-0">
                 <div class="col-12 p-0 mb-2">
@@ -160,16 +173,19 @@
             <ng-container *ngFor="let ticket of this.rss | slice:5; let i = index;">
                 <div class="card w-100 mb-2 bg-light">
                     <div class="card-body">
-                        <h5 class="card-title">{{ ticket.children[2].innerHTML.replace('Service Desk: ', '') }}</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ ticket.children[3].innerHTML | date:'short' }}</h6>
-                        <p class="card-text lineb">{{ ticket.children[7].innerHTML }}</p>
+                        <h5 class="card-title d-inline">{{ filterTitle(ticket.children[6].innerHTML) }}
+                        </h5>
+                        &nbsp;
+                        <h6 class="card-subtitle mb-2 text-muted d-inline">
+                            {{ ticket.children[3].innerHTML | date:'short' }}</h6>
+                        <p class="card-text lineb">{{ filterBody(ticket.children[7].innerHTML) }}</p>
                     </div>
                 </div>
             </ng-container>
 
             <div *ngIf="this.rss.length < 5">
                 <div class="text-center">
-                    <span i18n>Leider konnten wir keine Tickets finden. Bei Bedarf können Sie uns gerne
+                    <span i18n>Leider konnten wir noch keine Tickets finden. Bei Bedarf können Sie uns gerne
                         kontaktieren.
                     </span>
                 </div>
