--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -496,7 +496,7 @@
                    type="line"
                    [source]="bremenSource"
                    [minzoom]="11"
-                   [sourceLayer]="'br_brzone_flat_bremen'"
+                   [sourceLayer]="'br_brzone_flat_bremen_with_whitespace'"
                    [paint]="{
       'line-color': teilmarkt.color,
       'line-width': {
@@ -514,7 +514,7 @@
                    type="line"
                    [source]="bremenSource"
                    [minzoom]="11"
-                   [sourceLayer]="'br_brzone_flat_bremen'"
+                   [sourceLayer]="'br_brzone_flat_bremen_with_whitespace'"
                    [paint]="{
                         'line-color': '#0080FF',
                         'line-dasharray': [7,5],
@@ -532,7 +532,7 @@
         <mgl-layer id="landwirtschaft_bremen"
                    type="line"
                    [source]="bremenSource"
-                   [sourceLayer]="'br_brzone_flat_bremen'"
+                   [sourceLayer]="'br_brzone_flat_bremen_with_whitespace'"
                    [minzoom]="10"
                    [paint]="{
       'line-color': teilmarkt.color,
