responsive padding boris

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -70,7 +70,7 @@
                      (collapsed)="onCollapsingEnds()"
                      (expanded)="onExpandingEnds()"
                      [isAnimated]="true">
-                    <div class="well well-lg card card-block card-header verlauf">
+                    <div class="well well-lg card card-block card-header verlauf p-1 p-sm-2 p-md-3">
                         <div class="p-0"
                              *ngIf="features">
                             <div *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen' || adresse.properties.bundesland != 'Bremen') && !features.features.length"
