Fix aborting public-form without confirmation

--- a/power/src/app/fragebogen/fillout/fillout.component.html
+++ b/power/src/app/fragebogen/fillout/fillout.component.html
@@ -40,6 +40,7 @@
                                   [model]="form.content"
                                   [css]="data.css_style"
                                   (submitResult)="submitTask(form.id, $event)"
+                                  (changes)="changed($event)"
                                   #wrapper>
     </power-forms-surveyjs-wrapper>
 </main>
