--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
@@ -79,6 +79,8 @@
                 </div>
                 <div class="card-body">
                     <p><span i18n>Bodenrichtwert</span>: {{brw}} € / m²</p>
+                    <p><span i18n>{{einflussgroesse}} des Richtgrundstücks</span>: {{actualValue}}</p>
+                    <p><span i18n>Dazugehöriger Umrechnungskoeffizient</span>: {{actualKoef}}</p>
                     <ng-container *ngIf="data.text != 'Art der Bebauung'">
                         <p><span i18n>Individueller Wert für</span> {{einflussgroesse}}: {{data.werte[0].bzwt | number}}</p>
                     </ng-container>
@@ -86,7 +88,7 @@
                         <p><span i18n>Individueller Wert für</span> {{einflussgroesse}}: {{data.werte[0].bzwt | artDerBebauung}}</p>
                     </ng-container>
                     <p><span i18n>Dazugehöriger Umrechnungskoeffizient</span>: {{data.werte[0].koef | number}}</p>
-                    <p><span i18n>Individueller Bodenrichtwert</span>: {{brw}} € / m² * {{data.werte[0].koef | number}} ≈ {{brw * data.werte[0].koef | number:'1.0-0'}} € / m²</p>
+                    <p><span i18n>Individueller Bodenrichtwert</span>: {{brw}} € / m² / {{actualKoef | number}} * {{data.werte[0].koef | number}} ≈ {{brw / actualKoef * data.werte[0].koef | number:'1.0-0'}} € / m²</p>
                 </div>
             </div>
         </div>
