--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -217,7 +217,7 @@
                         {{umrechnung.text | einflussgroesse}}
                     </a>
                     <power-bodenrichtwert-detail-umrechnung #umrechnungstabelle
-                                                            [data]="umrechnung"
+                                                            [table]="umrechnung"
                                                             [brw]="feature.properties.brw"
                                                             [actualValue]="umrechnung.text === 'Art der Bebauung' ? feature.properties.nutzung[0]['enuta'] : feature.properties[umrechnung.text.toLowerCase()]">
                     </power-bodenrichtwert-detail-umrechnung>
