--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
@@ -111,8 +111,8 @@
                 </div>
                 <div class="card-body">
                     <p><span i18n>Bodenrichtwert</span>: {{brw}} € / m²</p>
-                    <p><span i18n>{{einflussgroesse}} des Richtgrundstücks</span>: {{actualValue | number}}</p>
-                    <p><span i18n>Dazugehöriger Umrechnungskoeffizient</span>: {{actualKoef.koef | number}}</p>
+                    <p><span i18n>{{einflussgroesse}} des Richtgrundstücks</span>: {{actualValue}}</p>
+                    <p><span i18n>Dazugehöriger Umrechnungskoeffizient</span>: {{actualKoef?.koef | number}}</p>
                     <ng-container *ngIf="table.text != 'Art der Bebauung'">
                         <p><span i18n>Individueller Wert für</span> {{einflussgroesse}}:
                             {{table.werte[0].bzwt | number}}</p>
@@ -122,9 +122,9 @@
                             {{table.werte[0].bzwt | artDerBebauung}}</p>
                     </ng-container>
                     <p><span i18n>Dazugehöriger Umrechnungskoeffizient</span>: {{table.werte[0].koef | number}}</p>
-                    <p><span i18n>Individueller Bodenrichtwert</span>: {{brw}} €/m² / {{actualKoef.koef | number}} *
+                    <p><span i18n>Individueller Bodenrichtwert</span>: {{brw}} €/m² / {{actualKoef?.koef | number}} *
                         {{table.werte[0].koef | number}} ≈
-                        {{brw / actualKoef.koef * table.werte[0].koef | number:'1.0-0'}} €
+                        {{brw / actualKoef?.koef * table.werte[0].koef | number:'1.0-0'}} €
                         / m²</p>
                 </div>
             </div>
