Replaced BORIS dropdown module

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -3,42 +3,58 @@
     <!-- desktop -->
     <div [class]="isCollapsed ? 'd-none d-lg-block' : 'd-none d-xxl-block'">
         <div class="nav-scroller bg-white shadow-sm border-top">
-            <nav class="nav nav-underline d-flex justify-content-between">
+            <nav class="nav nav-underline d-flex justify-content-between p-0">
                 <div class="nav">
                     <div class="btn-group d-flex">
                         <div class="btn-group"
-                             ngbDropdown
-                             role="group">
-                            <button class="btn btn-block"
+                             role="group"
+                             dropdown>
+                            <button id="button-stichtage-1"
+                                    dropdownToggle
                                     type="button"
-                                    ngbDropdownToggle>
-                                <span i18n>Stichtag</span>: {{stichtag | date}}
+                                    class="btn btn-block dropdown-toggle"
+                                    aria-controls="dropdown-stichtage-1"
+                                    aria-haspopup="true">
+                                <span i18n>Stichtag</span>: {{stichtag | date}} <span class="caret"
+                                      aria-hidden="true"></span>
                             </button>
-                            <div class="dropdown-menu"
-                                 ngbDropdownMenu>
-                                <button *ngFor="let stag of STICHTAGE"
-                                        type="button"
-                                        (click)="onStichtagChange(stag)"
-                                        ngbDropdownItem>
+                            <div id="dropdown-stichtage-1"
+                                 *dropdownMenu
+                                 class="dropdown-menu"
+                                 role="menu"
+                                 aria-labelledby="button-stichtage-1">
+                                <button type="button"
+                                        role="menuitem"
+                                        class="dropdown-item"
+                                        *ngFor="let stag of STICHTAGE"
+                                        (click)="onStichtagChange(stag)">
                                     {{stag | date}}
                                 </button>
                             </div>
                         </div>
+
                         <div class="btn-group"
-                             ngbDropdown
-                             role="group">
-                            <button class="btn btn-block"
+                             role="group"
+                             dropdown>
+                            <button id="button-teilmarkt-1"
+                                    dropdownToggle
                                     type="button"
-                                    ngbDropdownToggle>
-                                <span i18n>Teilmarkt</span>: {{teilmarkt.viewValue}}
+                                    class="btn btn-block dropdown-toggle"
+                                    aria-controls="dropdown-teilmarkt-1"
+                                    aria-haspopup="true">
+                                <span i18n>Teilmarkt</span>: {{teilmarkt.viewValue}} <span class="caret"
+                                      aria-hidden="true"></span>
                             </button>
-                            <div class="dropdown-menu"
-                                 ngbDropdownMenu>
-                                <button *ngFor="let tm of TEILMAERKTE"
-                                        type="button"
-                                        (click)="onTeilmarktChange(tm)"
-                                        ngbDropdownItem
-                                        class="btn-block">
+                            <div id="dropdown-teilmarkt-1"
+                                 *dropdownMenu
+                                 class="dropdown-menu"
+                                 role="menu"
+                                 aria-labelledby="button-teilmarkt-1">
+                                <button type="button"
+                                        role="menuitem"
+                                        class="dropdown-item"
+                                        *ngFor="let tm of TEILMAERKTE"
+                                        (click)="onTeilmarktChange(tm)">
                                     <svg width="0.75em"
                                          height="0.75em"
                                          viewBox="0 0 16 16"
@@ -151,7 +167,7 @@
     <!-- mobile -->
     <div [class]="isCollapsed ? 'd-lg-none' : 'd-xxl-none'">
         <div class="nav-scroller bg-white shadow-sm border-top">
-            <nav class="nav nav-underline">
+            <nav class="nav nav-underline p-0">
                 <div class="nav mr-auto">
                     <button class="nav-link btn"
                             [ngClass]="{'active': filterActive}"
@@ -290,43 +306,56 @@
          [class]="isCollapsed ? 'd-lg-none' : 'd-xxl-none'">
         <div class="btn-group d-flex w-100">
             <div class="btn-group"
-                 style="flex: 1;"
-                 ngbDropdown
                  role="group"
-                 aria-label="Button group with nested dropdown">
-                <button class="btn btn-block"
+                 style="flex: 1;"
+                 dropdown>
+                <button id="button-stichtage-2"
+                        dropdownToggle
                         type="button"
-                        ngbDropdownToggle>
-                    {{stichtag | date}}
+                        class="btn btn-block dropdown-toggle"
+                        aria-controls="dropdown-stichtage-2"
+                        aria-haspopup="true">
+                    {{stichtag | date}} <span class="caret"
+                          aria-hidden="true"></span>
                 </button>
-                <div class="dropdown-menu"
-                     ngbDropdownMenu>
-                    <button *ngFor="let stag of STICHTAGE"
-                            type="button"
-                            (click)="onStichtagChange(stag)"
-                            ngbDropdownItem>
+                <div id="dropdown-stichtage-2"
+                     *dropdownMenu
+                     class="dropdown-menu"
+                     role="menu"
+                     aria-labelledby="button-stichtage-2">
+                    <button type="button"
+                            role="menuitem"
+                            class="dropdown-item"
+                            *ngFor="let stag of STICHTAGE"
+                            (click)="onStichtagChange(stag)">
                         {{stag | date}}
                     </button>
                 </div>
             </div>
+
             <div class="btn-group"
-                 style="flex: 1;"
-                 ngbDropdown
-                 placement="bottom-right"
                  role="group"
-                 aria-label="Button group with nested dropdown">
-                <button class="btn btn-block"
+                 style="flex: 1;"
+                 dropdown>
+                <button id="button-teilmarkt-2"
+                        dropdownToggle
                         type="button"
-                        ngbDropdownToggle>
-                    {{teilmarkt.viewValue}}
+                        class="btn btn-block dropdown-toggle"
+                        aria-controls="dropdown-teilmarkt-2"
+                        aria-haspopup="true">
+                    {{teilmarkt.viewValue}} <span class="caret"
+                          aria-hidden="true"></span>
                 </button>
-                <div class="dropdown-menu"
-                     ngbDropdownMenu>
-                    <button *ngFor="let tm of TEILMAERKTE"
-                            type="button"
-                            (click)="onTeilmarktChange(tm)"
-                            ngbDropdownItem
-                            class="btn-block">
+                <div id="dropdown-teilmarkt-2"
+                     *dropdownMenu
+                     class="dropdown-menu dropdown-menu-right"
+                     role="menu"
+                     aria-labelledby="button-teilmarkt-2">
+                    <button type="button"
+                            role="menuitem"
+                            class="dropdown-item"
+                            *ngFor="let tm of TEILMAERKTE"
+                            (click)="onTeilmarktChange(tm)">
                         <svg width="0.75em"
                              height="0.75em"
                              viewBox="0 0 16 16"
