--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -173,13 +173,15 @@
             <ng-container *ngFor="let ticket of this.rss; let i = index;">
                 <div class="card w-100 mb-2 bg-light">
                     <div class="card-body">
-                        <h5 class="card-title d-inline">{{ filterTitle(ticket[13].innerHTML) }}
+                        <h5 class="card-title d-inline">
+                            {{ filterTitle(ticket.getElementsByTagName('summary')[0].innerHTML) }}
                         </h5>
                         &nbsp;
                         <h6 class="card-subtitle mb-2 text-muted d-inline">
-                            {{ ticket[7].innerHTML | date:'short' }}
+                            {{ ticket.getElementsByTagName('updated')[0].innerHTML | date:'short' }}
                         </h6>
-                        <p class="card-text lineb">{{ filterBody(ticket[15].innerHTML) }}</p>
+                        <p class="card-text lineb">
+                            {{ filterBody(ticket.getElementsByTagName('description')[0].innerHTML) }}</p>
                     </div>
                 </div>
             </ng-container>
